--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
     <ul class="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
+    <div id="tui-pagination-container">
+    </div>
     <button class="button button-more btn-hidden" id="more">Load more</button>
     </div>
     <button class="button button-up btn-hidden" id="up">Up</button>
