--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <ul class="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
-    <div id="tui-pagination-container">
+    <div id="tui-pagination-container" class="tui-pagination">
     </div>
     <button class="button button-more btn-hidden" id="more">Load more</button>
     </div>
