add const pagination

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link href="../node_modules/@pnotify/core/dist/PNotify.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../node_modules/tui-pagination/dist/tui-pagination.css">
     
 
   </head>
@@ -35,7 +36,7 @@
     <ul class="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
-    <div id="tui-pagination-container" class="tui-pagination">
+    <div id="tui-pagination-container" class="tui-pagination pag-hidden">
     </div>
     <button class="button button-more btn-hidden" id="more">Load more</button>
     </div>
